turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:4: error: ';' expected but ',' found.
a=360,0/7;
     ^